<resources>
    <string name="app_name">Amazing Store</string>
    <string name="access">Ingresar</string>
    <string name="exit">Salir</string>
    <string name="cart">Carrito de Compra</string>
    <string name="chat">Chat</string>
    <string name="photo">Foto</string>
    <string name="send">Enviar</string>
    <string name="product">Producto</string>
    <string name="name">Nombre</string>
    <string name="price">Precio</string>
    <string name="description">Descripción</string>
    <string name="tags">Categorías</string>
    <string name="status">Estado</string>
    <string name="save">Guardar</string>
    <string name="cancel">Cancelar</string>
    <string name="orders">Pedidos</string>
    <!--Cloud Messaging-->
    <string name="default_channel">amazingstore</string>
    <!--Google Client Id-->
    <string name="web_client_id" translatable="false">135023020170-s0lfka1809piuad8a4g70betdo625s1t.apps.googleusercontent.com</string>
</resources>