<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_chat"
        android:icon="@drawable/ic_chat"
        android:orderInCategory="100"
        android:title="@string/chat"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_cart"
        android:icon="@drawable/ic_cart"
        android:orderInCategory="100"
        android:title="@string/cart"
        app:actionLayout="@layout/custom_action_cart"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_orders"
        android:icon="@drawable/ic_orders"
        android:orderInCategory="100"
        android:title="@string/orders"
        app:showAsAction="always" />

    <item
        android:id="@+id/action_exit"
        android:icon="@drawable/ic_exit"
        android:orderInCategory="100"
        android:title="@string/exit"
        app:showAsAction="always" />

</menu>